# opencv_project_base

./: CMakeLists.txt  README.md  test.cpp
assets/: distance_transform.py
examples/: obj_detect.cpp  shapesearch.cpp
exercises/: color_detection.cpp  video_capture.cpp  warp_perspective.cpp
src/: test.cpp
src/basics/: image_processing.cpp  image_resize.cpp  shapes_n_text.cpp  video_capture.cpp
src/examples/: straighten.cpp
src/simple_projects/: camera_face_detection.cpp  color_detection.cpp  face_detection.cpp  shape_detection.cpp
